# email_tracking_bot

./: .env.example  README.md  README.md.bak  docker-compose.yml  pyproject.toml
bot/: Dockerfile  loader.py  main.py
bot/config/: config.py  logging.py
bot/handlers/user/: __init__.py  add_box.py  cancel.py  general_callback.py  general_messages.py  get_boxes.py  start.py
bot/keyboards/inline/: add_email.py  get_boxes.py
bot/keyboards/reply/: user_reply.py
bot/messages/user/: add_email.py  cancel_message.py  general_messages.py  get_boxes.py  start_message.py
bot/middleware/: __init__.py  api_middleware.py  throttling_middleware.py
bot/states/: email_states.py
bot/utils/: api_client.py  exceptions.py  schemas.py  validators.py
email_bot_web/: Dockerfile
email_bot_web/api/v1/: schemas.py  urls.py
email_bot_web/core/: asgi.py  settings.py
email_bot_web/email_service/: admin.py  api.py  apps.py  models.py  repositories.py  schemas.py  services.py  tasks.py
email_bot_web/email_service/migrations/: 0001_initial.py  0002_emailbox_is_active.py
email_bot_web/infrastructure/: exceptions.py  repositories.py
email_bot_web/infrastructure/gateways/: imap_client.py  redis_client.py
email_bot_web/infrastructure/utils/: email_decoder.py  encryption_service.py  restart_imap_clients.py  send_bot.py
email_bot_web/user/: admin.py  api.py  apps.py  models.py  repositories.py  schemas.py  services.py
email_bot_web/user/migrations/: 0001_initial.py
